tests/invalid/macro_param_unterm.c
#define UNTERM(x,
int main() { return 0; }
